# cosmos-rust

cosmos-sdk-proto/: Cargo.toml
cosmrs/: Cargo.toml
cosmrs/src/: lib.rs  tx.rs
cosmrs/src/abci/: msg_data.rs
cosmrs/src/base/: account_id.rs  coin.rs
cosmrs/src/crypto/: legacy_amino.rs  public_key.rs
cosmrs/src/crypto/secp256k1/: signing_key.rs
cosmrs/src/feegrant/: basic_allowance.rs  periodic_allowance.rs
cosmrs/src/tx/: auth_info.rs  body.rs  msg.rs  raw.rs  sign_doc.rs  signing.rs
