[package]
name = "cosmos-sdk-proto"
version = "0.19.0"
authors = [
    "Justin Kilpatrick <justin@althea.net>",
    "Greg Szabo <greg@informal.systems>",
    "Tony Arcieri <tony@iqlusion.io>"
]
license = "Apache-2.0"
repository = "https://github.com/cosmos/cosmos-rust/tree/main/cosmos-sdk-proto"
description = "Protobuf stuct defintions for interacting Cosmos SDK powered blockchains"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords = ["blockchain", "cosmos", "tendermint", "proto"]
edition = "2021"
rust-version = "1.63"

[dependencies]
prost = { version = "0.11", default-features = false }
prost-types = { version = "0.11", default-features = false }
tendermint-proto = { version = "0.32", default-features = false }

# Optional dependencies
tonic = { version = "0.9", optional = true, default-features = false, features = ["codegen", "prost"] }

[features]
default = ["grpc-transport", "std"]
std = [
    "prost/std",
    "prost-types/std",
]
grpc = ["tonic"]
grpc-transport = ["grpc", "tonic/transport"]
cosmwasm = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
