[package]
name = "cosmrs"
version = "0.14.0"
authors = ["Tony Arcieri <tony@iqlusion.io>"]
license = "Apache-2.0"
repository = "https://github.com/cosmos/cosmos-rust/tree/main/cosmrs"
description = "Transaction builder and signer for Cosmos-based blockchains"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "encoding"]
keywords = ["blockchain", "cosmos", "tendermint", "transaction"]
edition = "2021"
rust-version = "1.65"

[dependencies]
cosmos-sdk-proto = { version = "0.19", default-features = false, path = "../cosmos-sdk-proto" }
ecdsa = { version = "0.16", default-features = false }
eyre = { version = "0.6", default-features = false }
k256 = { version = "0.13", features = ["ecdsa", "sha256"], default-features = false}
rand_core = { version = "0.6", features = ["std"], default-features = false}
serde = { version = "1", features = ["serde_derive"], default-features = false}
serde_json = { version = "1", default-features = false }
subtle-encoding = { version = "0.5", features = ["bech32-preview"], default-features = false}
tendermint = { version = "0.32", features = ["secp256k1", "rust-crypto"], default-features = false}
thiserror = "1"

# optional dependencies
bip32 = { version = "0.5", features = ["alloc", "secp256k1"], optional = true }
tendermint-rpc = { version = "0.32", optional = true, features = ["http-client"] }
tokio = { version = "1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
hex-literal = "0.4"

[features]
default   = ["std"]
std = [
    "bip32/std",
    "ecdsa/std",
]
cosmwasm  = ["cosmos-sdk-proto/cosmwasm"]
dev       = ["rpc", "tokio"]
grpc      = ["cosmos-sdk-proto/grpc-transport", "grpc-core"]
grpc-core = ["cosmos-sdk-proto/grpc"]
rpc       = ["tendermint-rpc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
